# astock-analysis-system

./: .env.example  .gitattributes  .gitignore  AGENTS.md  A股分析系统_审查与改进建议.md  CLAUDE.md  Makefile  QuantDinger对标能力升级优化建议报告.md  README.md  _工作上下文.md  _项目运行手册.md  bulk_sync.py  cg.sh  chanlun_demo.py  debug-tool.html  docker-compose.yml  frontend-vs-QuantDinger-评估与升级建议.md  init_duckdb_simple.py  pyproject.toml  scheduler.py  start.bat  start.command  start.sh  stop.bat  stop.sh  sync_data.py  test_phase3.py  前端UI设计优化详细方案.md  系统架构与代码检查报告.md  项目整体评估与升级建议.md
$TMPDIR/: parse_agents.js
.claude/: launch.json
001-沟通记录/: 2026-04-16.md  2026-04-17.md  2026-04-28.md  2026-05-06.md  2026-05-09.md  2026-05-14.md  2026-05-15-02.md  2026-05-15.md  2026-05-21.md  2026-05-23-001-Qlib_Vibe-Trading研究及系统升级规划.md  2026-05-24-001-前端测试与修复.md  2026-05-25-001-筹码分布策略完整实现.md  2026-05-25-002-多股票历史数据验证测试.md  2026-05-25-003-策略框架评估与方案制定.md  2026-05-25-004-QuantConnect_LEAN项目研究及借鉴评估.md  2026-05-25-005-量化系统优化升级计划制定.md  2026-05-26.md  2026-05-28.md  2026-05-29.md  2026-06-03-001-后端完成前端待开发.md  2026-06-03-003-前端开发完成.md  2026-06-03.md  2026-06-11.md  2026-06-12.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  25-05-24沟通纪要.md  26-05-19沟通纪要.md  26-05-21沟通纪要.md  26-05-25沟通纪要.md  26-05-29沟通纪要.md  26-05-30沟通纪要-002.md  (+27 more)
002-方案存档/: 026-达尔文筛选系统数据源全面评估报告.md  027-eFinance数据源测试报告.md  028-BigQuant平台研究报告.md  029-A股数据源综合评估分析报告.md  030-AI量化交易书籍详细解读报告.md  031-AI量化交易书籍详细解读报告.md  032-DuckDB数据源研究报告.md  034-DuckDB缓存机制设计文档.md  (+186 more)
(+342 files in other folders)
