[project]
name = "astock-analysis-system"
version = "2.0.0"
description = "A股股票分析决策支持系统"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
